# ConvexHull

./: CMakeLists.txt  README.md
convex_hull/: CMakeLists.txt  README.md
convex_hull/include/: ConvexHullMesh.h
convex_hull/src/: ConvexHull.cpp  Viewer.cpp
